[project]
name = "langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "livekit>=1.1.10",
    "livekit-agents>=1.3.11",
    "livekit-plugins-deepgram==1.3.11",
    "livekit-plugins-elevenlabs==1.3.11",
    "livekit-plugins-google==1.3.11",
    "pypdf>=6.13.2",
    "tavily-python>=0.7.26",
]
